--- a/client/src/components/features/GroupBalancesAndHistory/GroupHistory/RenderGroupPayment/RenderGroupPayment.module.css
+++ b/client/src/components/features/GroupBalancesAndHistory/GroupHistory/RenderGroupPayment/RenderGroupPayment.module.css
@@ -45,14 +45,14 @@
     flex-wrap: wrap;
     margin-left: 1rem;
     padding-top: 0.1rem;
-    padding-bottom: 0.25rem;
+    padding-bottom: 0.1rem;
     padding-left: 0rem;
     max-width: 55%;
   }
   .leftColumn {
     margin-right: 0.5rem;
     padding-top: 0.1rem;
-    padding-bottom: 0.25rem;
+    padding-bottom: 0.1rem;
     padding-left: 0rem;
     padding-right: 0rem;
   }
@@ -80,7 +80,7 @@
     font-size: 1.4rem;
   }
   .rightColumn {
-    max-width: 25%;
+    max-width: 35%;
     font-size: 1.4rem;
   }
 }
